# open-nvr

./: .dockerignore  .env.docker  .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  DOCKER_QUICKSTART.md  Dockerfile  README.md  SECURITY.md  USER_MANUAL.md  docker-compose.linux.yml  docker-compose.yml  docker-entrypoint.sh  mediamtx.docker.yml  mediamtx.local.yml  mediamtx.yml  start.ps1  start.sh  supervisord.conf
app/: .gitignore  README.md  env.example  eslint.config.js  index.html  package-lock.json  package.json  postcss.config.js  vite.config.ts
app/src/: index.css  main.tsx
app/src/auth/: AuthContext.tsx
app/src/components/: DvrTimeline.tsx  HlsPlayer.tsx  Modal.tsx  NotificationPermissionPrompt.tsx  RecordingBrowser.tsx  RecordingTimeline.tsx  Snackbar.tsx  WebRtcWhepPlayer.tsx  usePushNotification.ts
app/src/hooks/: useFullscreen.ts  usePermissions.tsx  useTheme.ts
app/src/lib/: api.ts  apiService.ts  kaiCService.ts  mtxHealth.ts
app/src/services/: aiService.ts  authService.ts  cameraService.ts  cloudService.ts  cloudStreamingService.ts  complianceService.ts  integrationService.ts  mediaMtxService.ts  mediaSourceService.ts  recordingService.ts  systemService.ts  userService.ts
app/src/shell/: AppShell.tsx
app/src/views/: AIDetectionResults.tsx  AIEngine.tsx  AIModelsBYOM.tsx  AccessControl.tsx  AlertsIncidents.tsx  BYOK.tsx  Cameras.tsx  Cloud.tsx  Compliance.tsx  Dashboard.tsx  Events.tsx  FirmwareView.tsx  FirstTimeSetup.tsx  Integrations.tsx  LiveView.tsx  Login.tsx  Logs.tsx  MFASetup.tsx  MFAVerify.tsx  NetworkView.tsx  OnvifTools.tsx  PlaybackView.tsx  Register.tsx  Settings.tsx  Support.tsx  SuricataAlertStream.tsx  SystemNetworkMonitoring.tsx  Updates.tsx
docs/: DOCKER_SETUP.md  LOCAL_DEV_CHECKLIST.md  LOCAL_SETUP.md
kai-c/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  START_INSTRUCTIONS.md  main.py  pyproject.toml  requirements.txt  start.py  start_no_reload.py
kai-c/kai_c/: connector.py  schemas.py
kai-c/test/: test.py
scripts/: README.md  generate-secrets.ps1  generate-secrets.sh  install.ps1  install.sh  setup.bat  setup.sh  start-mediamtx.ps1  start-mediamtx.sh
server/: .env.example  .gitignore  alembic.ini  dependencies.py  env.example  main.py  models.py  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml  schemas.py  start.py
server/core/: README.md  __init__.py  auth.py  config.py  database.py  logging_config.py  permissions.py
server/middleware/: README.md  __init__.py  request_logging.py
server/migrations/: README.md  env.py
server/migrations/versions/: d75d15b88c1a_initial_schema_squash.py
server/routers/: __init__.py  ai_detection_results.py  ai_model_management.py  ai_models.py  audit_logs.py  auth.py  camera_config.py  cameras.py  cloud.py  cloud_inference.py  cloud_providers.py  cloud_streaming.py  compliance.py  events.py  firmware.py  general.py  integrations.py  media_source.py  mediamtx_admin.py  mediamtx_hooks.py  network.py  onvif.py  password_policy.py  permissions.py  recordings.py  roles.py  security.py  streams.py  suricata_logs.py  suricata_stream.py  system.py  users.py  webrtc.py
server/scripts/: README.md  __init__.py  disable_mfa.py  init_db.py
server/services/: __init__.py  audit_service.py  camera_config_service.py  camera_service.py  cloud_inference_service.py  cloud_recording_service.py  cloud_streaming_service.py  credential_vault_service.py  event_bus_service.py  hls_playback_service.py  inference_manager.py  integration_service.py  kai_c_service.py  mediamtx_admin_service.py  mediamtx_config_service.py  mediamtx_jwt_service.py  mediamtx_startup_service.py  onvif_digest_service.py  onvif_service.py  ptz_service.py  recording_session_service.py  retention_service.py  storage_service.py  stream_service.py  tenant_quota_service.py  user_service.py
server/systemd/: mediamtx.service  opennvr-api.service
server/utils/: README.md  encryption.py  path_mapper.py
(+32 files in other folders)
