[project]
name = "opennvr-server"
version = "1.0.0"
description = "OpenNVR - AI-Powered, Security-First Video Surveillance Platform Backend"
requires-python = ">=3.11"
dependencies = [
    "alembic==1.12.1",
    "annotated-types==0.7.0",
    "anyio==3.7.1",
    "bcrypt==4.0.1",
    "boto3>=1.34,<2",
    "certifi==2025.8.3",
    "cffi==2.0.0",
    "charset-normalizer==3.4.3",
    "click==8.3.0",
    "colorama==0.4.6",
    "cryptography==46.0.1",
    "dnspython==2.8.0",
    "ecdsa==0.19.1",
    "email-validator==2.1.0.post1",
    "fastapi==0.104.1",
    "greenlet==3.2.4",
    "h11==0.16.0",
    "httpx==0.27.0",
    "httptools==0.6.4",
    "idna==3.10",
    "Mako==1.3.10",
    "MarkupSafe==3.0.2",
    "passlib==1.7.4",
    "psycopg2-binary==2.9.9",
    "pyasn1==0.6.1",
    "pycparser==2.23",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "pydantic_core==2.14.1",
    "pyotp==2.9.0",
    "python-dotenv==1.0.0",
    "python-jose==3.3.0",
    "python-multipart==0.0.6",
    "PyYAML==6.0.3",
    "requests==2.32.3",
    "rsa==4.9.1",
    "six==1.17.0",
    "sniffio==1.3.1",
    "SQLAlchemy==2.0.23",
    "starlette==0.27.0",
    "typing_extensions==4.15.0",
    "urllib3==2.5.0",
    "uvicorn==0.24.0",
    "watchfiles==1.1.0",
    "websockets==15.0.1",
    "WSDiscovery==2.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff==0.15.2",
    # Uncomment when needed:
    # "pytest==8.0.0",
    # "pytest-asyncio==0.23.0",
    # "pytest-cov==4.1.0",
    # "mypy==1.8.0",
    # "pre-commit==3.6.0",
]

[dependency-groups]
dev = [
    "ruff==0.15.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
