[project]
name = "opennvr-server"
version = "1.0.0"
description = "OpenNVR - AI-Powered, Security-First Video Surveillance Platform Backend"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.12.1",
    "bcrypt>=4.0.1",
    "boto3>=1.34,<2",
    "click>=8.3.0",
    "cryptography>=46.0.0",
    "email-validator>=2.1.0",
    "fastapi>=0.104.1",
    "httpx>=0.27.0",
    "passlib>=1.7.4",
    "psycopg2-binary>=2.9.9",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "python-jose>=3.3.0",
    "python-multipart>=0.0.6",
    "PyYAML>=6.0.3",
    "pyotp>=2.9.0",
    "requests>=2.32.0",
    "SQLAlchemy>=2.0.23",
    "uvicorn>=0.24.0",
    "WSDiscovery>=2.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.2",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
